--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # These are some examples of commonly ignored file patterns.
-# You should customize this list as applicable to your project.
-# Learn more about .gitignore:
-#     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 # Node artifact files
 node_modules/
 dist/
+
+# No import or eval files
+import/
+eval/
+ignore/
 
 # Compiled Java class files
 *.class
